			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04r: *********************************

************************* Version 8.04q: *********************************

BUG: (6/12/06, GVG) Drc doesn't display error properly (Bug #1114). This is the case of two overlapping
vias coming from two different cells.
FIX: In case of overlapping vias, the errorLog should only contain the rectangle that the 2 vias form.

BUG: (6/9/06, GVG) Inconsistent scale for angles in GetNodeInfo v/s GetMultiInfo (Bug#1109)
FIX: Values in GetInfoMulti.java were inconsistently scaled to integers.

BUG: (6/9/06, GVG) Bogus min area drc errors reported on dp_stageN{lay} (Bug #1111).
Problem: the abort signal given by user was not considered when leaving the cell using the enumerator.
FIX: Extra condition added.

BUG: (6/8/06, DN) Duisplay mode isn't chang immediiately.
FIX: Call EditWindow.displayAlgorithmChanged() from DIsplayControlTab.

BUG: (6/8/06, DN) Export->ReExport* broken (Bug #1107).
FIX: In PortInst.hasConnections().

IMP/MAN: (6/8/06, GVG) Electric needs a way to cycle through windows (bug #954)
Final solution in CVS. Cycle through all WindowFrame windows + messages window
added as dynamic message.

BUG: (6/8/06, SMR) Too much selected after "Up Hierarchy" (Bug #1105).
FIX: In EditWindow.upHierarchy(), set selection only if no previous cell
     history found.  In WindowFrame.setCellByHistory(), set only port
     or highlights, but not both.

BUG: (6/8/06, SMR) "Show ports on node" and other export highlighting
     crops text on the right side (Bug #1030).
FIX: In ExportChanges.showPortsAndExports(), draw text better.

BUG: (6/8/06, GVG) Waveform viewer does not display DC signals from EPIC output (Bug#1103)
FIX: Wrong boundary condition for end point events.

BUG/MAN: (6/8/06, GVG) exception when refining object selection in layout (Bug #1106)